--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "curl/curl": "^1.9",
+        "curl/curl": "^1.9"
     },
     "autoload": {
         "psr-4": {
