--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,13 @@
     ],
     "require": {
         "php": "^7.1.3",
-        "curl/curl": "^1.9"
+        "curl/curl": "^1.9",
+        "cviebrock/eloquent-sluggable": "^4.5"
     },
     "autoload": {
+        "files": [
+          "src/utilities.php"
+        ],
         "psr-4": {
             "Droplister\\EduCore\\": "src/"
         }
